# Word-Memorizer

./: LICENSE  README.md  word_memorizer
Word Memorizer/: CMakeLists.txt  word_memorizer
Word Memorizer/src/: AboutDialog.cpp  AboutDialog.h  MainWindow.cpp  MainWindow.h  MainWindow_ubuntu20.cpp  MainWindow_ubuntu20.h  SettingsDialog.cpp  SettingsDialog.h  SettingsManager.cpp  SettingsManager.h  UsageDialog.cpp  UsageDialog.h  WordEditorDialog.cpp  WordManager.cpp  WordManager.h  WordManagerDialog.cpp  main.cpp  main_ubuntu20.cpp
